objects/IntegrationLog__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentSize__c</fullName>
        <label>AttachmentSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReqTimeStamp__c</fullName>
        <description>Request time stamp calculation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ReqTimeStamp</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResTimeStamp__c</fullName>
        <description>Response time stamp calculation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ResTimeStamp</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseTime__c</fullName>
        <description>Response time stamp calculation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ResponseTime</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <description>Holds the status code of the response</description>
        <encryptionScheme>None</encryptionScheme>
        <label>StatusCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusDescription__c</fullName>
        <description>Holds the status description of the response.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>StatusDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Holds the status of the response</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Stamp_milli_seconds__c</fullName>
        <description>Added as part of AIA changes to capture timestamp which includes seconds and milliseconds</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Stamp (milli seconds)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msgData__c</fullName>
        <description>Request data fields as a string</description>
        <encryptionScheme>None</encryptionScheme>
        <label>msgData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>msgType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>msgType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relatedData__c</fullName>
        <description>Related record data for the msgData</description>
        <encryptionScheme>None</encryptionScheme>
        <label>relatedData</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>result</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sourceAddress</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>source</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>targetAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>targetAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>target__c</fullName>
        <description>Name of target system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>target</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timeStamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>timeStamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>transactionID__c</fullName>
        <label>transactionID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>The purpose of the integration log is to record all request/response messages exchanged between the SF org instance and an external integration point.</description>
    <label>IntegrationLog</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntegrationLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Broker_Hub</fullName>
        <columns>NAME</columns>
        <columns>timeStamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>result__c</columns>
        <columns>msgType__c</columns>
        <columns>msgData__c</columns>
        <columns>relatedData__c</columns>
        <columns>target__c</columns>
        <filterScope>Everything</filterScope>
        <label>Broker Hub</label>
    </listViews>
    <listViews>
        <fullName>EGP_Failures</fullName>
        <columns>NAME</columns>
        <columns>target__c</columns>
        <columns>timeStamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>result__c</columns>
        <columns>msgType__c</columns>
        <columns>msgData__c</columns>
        <columns>relatedData__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>result__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <filters>
            <field>target__c</field>
            <operation>equals</operation>
            <value>EGP</value>
        </filters>
        <label>EGP - Failures</label>
    </listViews>
    <listViews>
        <fullName>EGP_Successful</fullName>
        <columns>NAME</columns>
        <columns>target__c</columns>
        <columns>timeStamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>result__c</columns>
        <columns>msgType__c</columns>
        <columns>msgData__c</columns>
        <columns>relatedData__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>result__c</field>
            <operation>notEqual</operation>
            <value>ERROR</value>
        </filters>
        <filters>
            <field>target__c</field>
            <operation>equals</operation>
            <value>EGP</value>
        </filters>
        <label>EGP - Successful</label>
    </listViews>
    <listViews>
        <fullName>EGP_THIS_WEEK</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>transactionID__c</columns>
        <columns>target__c</columns>
        <columns>timeStamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>result__c</columns>
        <columns>msgType__c</columns>
        <columns>msgData__c</columns>
        <columns>relatedData__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>timeStamp__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>target__c</field>
            <operation>equals</operation>
            <value>EGP</value>
        </filters>
        <label>EGP - THIS WEEK</label>
    </listViews>
    <listViews>
        <fullName>From_TIBCO_to_SFDC</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>timeStamp__c</columns>
        <columns>msgData__c</columns>
        <columns>msgType__c</columns>
        <columns>relatedData__c</columns>
        <columns>result__c</columns>
        <columns>source__c</columns>
        <columns>target__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>target__c</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>From TIBCO to SFDC</label>
    </listViews>
    <listViews>
        <fullName>Last_48_hours</fullName>
        <columns>NAME</columns>
        <columns>target__c</columns>
        <columns>timeStamp__c</columns>
        <columns>transactionID__c</columns>
        <columns>msgType__c</columns>
        <columns>result__c</columns>
        <columns>msgData__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last 48 hours</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>NAME</columns>
        <columns>timeStamp__c</columns>
        <columns>Time_Stamp_milli_seconds__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>result__c</columns>
        <columns>msgType__c</columns>
        <columns>msgData__c</columns>
        <columns>relatedData__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>source__c</field>
            <operation>equals</operation>
            <value>CIAM</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <listViews>
        <fullName>transaction</fullName>
        <columns>NAME</columns>
        <columns>timeStamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>result__c</columns>
        <columns>msgType__c</columns>
        <columns>msgData__c</columns>
        <columns>relatedData__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>msgType__c</field>
            <operation>equals</operation>
            <value>RESPONSE,REQUEST</value>
        </filters>
        <label>transaction id</label>
    </listViews>
</CustomObject>